<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/foodImageFrameLayout"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/foodImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                tools:src="@drawable/frame3" />

            <LinearLayout
                android:id="@+id/linearView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/layoutButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        style="@style/PrimaryButton"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/facebook" />

                    <Button
                        style="@style/PrimaryButton"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/twitter" />

                    <Button
                        style="@style/PrimaryButton"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/instagram" />

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodImageFrameLayout"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@+id/profileImageView"
            app:layout_constraintTop_toTopOf="@+id/profileImageView"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            tools:text="@tools:sample/date/ddmmyy" />

        <ImageView
            android:id="@+id/heartImageView"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="48dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
            app:layout_constraintStart_toEndOf="@+id/dateTextView"
            app:srcCompat="@drawable/ic_svg_heart" />

        <TextView
            android:id="@+id/foodDescTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageView"
            tools:text="@string/food_quote_1" />

        <TextView
            android:id="@+id/votesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
            app:layout_constraintStart_toEndOf="@+id/heartImageView"
            tools:text="@tools:sample/us_zipcodes" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/votesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_svg_heart_button"
            app:backgroundTint="@android:color/white"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@+id/foodImageFrameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodImageFrameLayout" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/dishesViewPager"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodDescTextView" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dishesViewPager"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>